external-projects/sui-prover/crates/sui-prover/tests/snapshots/conditionals/simple_max.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/conditionals/simple_max.fail.move:20:5
   │
20 │     ensures(result >= a);
   │     ^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/conditionals/simple_max.fail.move:17: simple_max_spec

error: prover::ensures does not hold
   ┌─ tests/inputs/conditionals/simple_max.fail.move:21:5
   │
21 │     ensures(result >= b);
   │     ^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/conditionals/simple_max.fail.move:17: simple_max_spec
